# CrypticPassword

./: README.md
CrypticPassword_1.5.0/: CMakeLists.txt  Makefile  README.md  VALIDATION.txt  VALIDATION_ANDROID.txt  VALIDATION_CRYPTICPASSWORD_1.5.0.txt  VALIDATION_IOS.txt  VALIDATION_IOS_XCODE_PATHS.txt
CrypticPassword_1.5.0/android/: Makefile  README.md  settings.gradle
CrypticPassword_1.5.0/android/app/: build.gradle
CrypticPassword_1.5.0/android/app/src/main/: AndroidManifest.xml
CrypticPassword_1.5.0/android/app/src/main/java/com/anoop/crypticpassword/: CrypticPasswordAlgorithm.java  MainActivity.java
CrypticPassword_1.5.0/android/app/src/main/res/values/: strings.xml
CrypticPassword_1.5.0/android/packaging/: build_apk.sh  build_release_aab.sh
CrypticPassword_1.5.0/android/tests/: CrypticPasswordAlgorithmSmoke.java
CrypticPassword_1.5.0/common/: crypticpassword_core.c  crypticpassword_core.h
CrypticPassword_1.5.0/docs/: ANALYSIS.md
CrypticPassword_1.5.0/docs/original/: CrypticPassword.html  CrypticPasswordDlg.cpp
CrypticPassword_1.5.0/ios/: Info.plist  Makefile  README.md
CrypticPassword_1.5.0/ios/packaging/: build_ipa.sh
CrypticPassword_1.5.0/ios/src/: AppDelegate.swift  CrypticPasswordAlgorithm.swift  CrypticPasswordViewController.swift  SceneDelegate.swift
CrypticPassword_1.5.0/ios/tests/: CrypticPasswordAlgorithmSmoke.swift
CrypticPassword_1.5.0/ios/xcode/CrypticPasswordiOS.xcodeproj/: project.pbxproj
CrypticPassword_1.5.0/ios/xcode/CrypticPasswordiOS.xcodeproj/xcshareddata/xcschemes/: CrypticPasswordiOS.xcscheme
CrypticPassword_1.5.0/linux/: CMakeLists.txt  Makefile
CrypticPassword_1.5.0/linux/anjuta/: CrypticPassword.anjuta
CrypticPassword_1.5.0/linux/packaging/: build_deb.sh  build_rpm.sh
CrypticPassword_1.5.0/linux/packaging/applications/: org.cryptic.password.desktop
CrypticPassword_1.5.0/linux/packaging/debian/DEBIAN/: control
CrypticPassword_1.5.0/linux/packaging/rpm/: crypticpassword.spec
CrypticPassword_1.5.0/linux/src/: main_gtk.c
CrypticPassword_1.5.0/mac/: CMakeLists.txt  Makefile  README.md
CrypticPassword_1.5.0/mac/package/: CrypticPasswordLauncher.sh.in  Info.plist  make_dmg.sh
CrypticPassword_1.5.0/mac/package/swift/: make_dmg.sh
CrypticPassword_1.5.0/mac/src/swift/: CrypticPasswordApp.swift
CrypticPassword_1.5.0/mac/swing/: CMakeLists.txt  Makefile  README.md
CrypticPassword_1.5.0/mac/swing/netbeans/CrypticPasswordSwingNB/: build.xml  manifest.mf
CrypticPassword_1.5.0/mac/swing/netbeans/CrypticPasswordSwingNB/nbproject/: project.properties  project.xml
CrypticPassword_1.5.0/mac/swing/package/: Info.plist  make_dmg.sh
CrypticPassword_1.5.0/mac/swing/src/: CrypticPasswordSwing.java
CrypticPassword_1.5.0/mac/swing/xcode/CrypticPasswordSwing.xcodeproj/: project.pbxproj
CrypticPassword_1.5.0/mac/tests/: CrypticPasswordSwiftCoreTest.swift
CrypticPassword_1.5.0/mac/xcode/CrypticPasswordSwift.xcodeproj/: project.pbxproj
CrypticPassword_1.5.0/mac/xcode/CrypticPasswordSwift.xcodeproj/xcshareddata/xcschemes/: CrypticPasswordSwift.xcscheme
CrypticPassword_1.5.0/scripts/: build_all_supported_here.sh  package_source.sh
CrypticPassword_1.5.0/tests/: test_core.c
CrypticPassword_1.5.0/windows/: CMakeLists.txt  CrypticPasswordWin32.sln  CrypticPasswordWin32.vcxproj  CrypticPasswordWin32.vcxproj.filters  Makefile
CrypticPassword_1.5.0/windows/installer/: CrypticPassword.iss  CrypticPassword.wxs  build_installer.ps1
CrypticPassword_1.5.0/windows/src/: app.manifest  app.rc  main_win32.c  resource.h
